@@ -8,6 +8,10 @@ Changelog
 4.0b1 - Unreleased
 ------------------
 
+- User-add dialog will no longer hide errors (e.g., inability to mail).
+  fixes https://dev.plone.org/plone/ticket/9964
+  [smcmahon]
+
 - Changed noform action for user add ajax overlay form to "reload" to
   fix https://dev.plone.org/plone/ticket/9957
   [smcmahon]
